chore: explicit list files in cmake

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,36 +1,78 @@
+set(FLATBUFFERS_PWD external/flatbuffers)
+set(CLI11_PWD external/CLI11)
+set(RAPIDJSON_PWD external/rapidjson)
+
 ##
 ## HEADERS
 ## project .h .hpp files
 ##
 set(FLATBUFFERS_GENERATED_HEADERS
-    flatbuffers_schemes/file_tree_generated.h
-    )
+    flatbuffers_schemes/file_tree_generated.h)
 set(FLATBUFFERS_HEADERS
     ${FLATBUFFERS_GENERATED_HEADERS}
-    external/flatbuffers/code_generators.h
-    external/flatbuffers/base.h
-    external/flatbuffers/flatbuffers.h
-    external/flatbuffers/hash.h
-    external/flatbuffers/idl.h
-    external/flatbuffers/util.h
-    external/flatbuffers/reflection.h
-    external/flatbuffers/reflection_generated.h
-    external/flatbuffers/stl_emulation.h
-    external/flatbuffers/flexbuffers.h
-    external/flatbuffers/registry.h
-    external/flatbuffers/minireflect.h
-    )
+    ${FLATBUFFERS_PWD}/base.h
+    ${FLATBUFFERS_PWD}/code_generators.h
+    ${FLATBUFFERS_PWD}/flatbuffers.h
+    ${FLATBUFFERS_PWD}/flatc.h
+    ${FLATBUFFERS_PWD}/flexbuffers.h
+    ${FLATBUFFERS_PWD}/grpc.h
+    ${FLATBUFFERS_PWD}/hash.h
+    ${FLATBUFFERS_PWD}/idl.h
+    ${FLATBUFFERS_PWD}/minireflect.h
+    ${FLATBUFFERS_PWD}/reflection.h
+    ${FLATBUFFERS_PWD}/reflection_generated.h
+    ${FLATBUFFERS_PWD}/registry.h
+    ${FLATBUFFERS_PWD}/stl_emulation.h
+    ${FLATBUFFERS_PWD}/util.h)
 
 set(CLI11_HEADERS
-    external/CLI11/CLI11.hpp
-    )
+    ${CLI11_PWD}/CLI11.hpp)
 
-file(GLOB_RECURSE RAPIDJSON_HEADERS external/rapidjson "*.h")
+set(RAPIDJSON_HEADERS
+    ${RAPIDJSON_PWD}/allocators.h
+    ${RAPIDJSON_PWD}/cursorstreamwrapper.h
+    ${RAPIDJSON_PWD}/document.h
+    ${RAPIDJSON_PWD}/encodedstream.h
+    ${RAPIDJSON_PWD}/encodings.h
+    ${RAPIDJSON_PWD}/error/en.h
+    ${RAPIDJSON_PWD}/error/error.h
+    ${RAPIDJSON_PWD}/filereadstream.h
+    ${RAPIDJSON_PWD}/filewritestream.h
+    ${RAPIDJSON_PWD}/fwd.h
+    ${RAPIDJSON_PWD}/internal/biginteger.h
+    ${RAPIDJSON_PWD}/internal/diyfp.h
+    ${RAPIDJSON_PWD}/internal/dtoa.h
+    ${RAPIDJSON_PWD}/internal/ieee754.h
+    ${RAPIDJSON_PWD}/internal/itoa.h
+    ${RAPIDJSON_PWD}/internal/meta.h
+    ${RAPIDJSON_PWD}/internal/pow10.h
+    ${RAPIDJSON_PWD}/internal/regex.h
+    ${RAPIDJSON_PWD}/internal/stack.h
+    ${RAPIDJSON_PWD}/internal/strfunc.h
+    ${RAPIDJSON_PWD}/internal/strtod.h
+    ${RAPIDJSON_PWD}/internal/swap.h
+    ${RAPIDJSON_PWD}/istreamwrapper.h
+    ${RAPIDJSON_PWD}/memorybuffer.h
+    ${RAPIDJSON_PWD}/memorystream.h
+    ${RAPIDJSON_PWD}/msinttypes/inttypes.h
+    ${RAPIDJSON_PWD}/msinttypes/stdint.h
+    ${RAPIDJSON_PWD}/ostreamwrapper.h
+    ${RAPIDJSON_PWD}/pointer.h
+    ${RAPIDJSON_PWD}/prettywriter.h
+    ${RAPIDJSON_PWD}/rapidjson.h
+    ${RAPIDJSON_PWD}/reader.h
+    ${RAPIDJSON_PWD}/schema.h
+    ${RAPIDJSON_PWD}/stream.h
+    ${RAPIDJSON_PWD}/stringbuffer.h
+    ${RAPIDJSON_PWD}/writer.h)
 
-set(HEADERS
+set(EXTERNAL_HEADERS
     ${FLATBUFFERS_HEADERS}
     ${CLI11_HEADERS}
-    ${RAPIDJSON_HEADERS}
+    ${RAPIDJSON_HEADERS})
+
+set(HEADERS
+    ${EXTERNAL_HEADERS}
     extensions/error_reporter.hpp
     extensions/help_functions.hpp
     extensions/md5.hpp
@@ -48,13 +90,16 @@ set(HEADERS
 ##
 set(FLATBUFFERS_SRCS
     external/flatbuffers/code_generators.cpp
-    external/flatbuffers/idl_parser.cpp
     external/flatbuffers/idl_gen_text.cpp
+    external/flatbuffers/idl_parser.cpp
     external/flatbuffers/reflection.cpp
-    external/flatbuffers/util.cpp
-    )
+    external/flatbuffers/util.cpp)
+
+set(EXTERNAL_SRCS
+    ${FLATBUFFERS_SRCS})
+
 set(SRCS
-    ${FLATBUFFERS_SRCS}
+    ${EXTERNAL_SRCS}
     main.cpp
     directoryreader.cpp
     dependency_analyzer.cpp
