fix: dependencies between src and test files

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -80,7 +80,7 @@ set(HEADERS
     extensions/flatbuffers_extensions.hpp
     types/file_tree.hpp
     types/splitted_string.hpp
-    types/file_tree_forest.hpp
+    types/file_system.hpp
     parsers/sourceparser.hpp
     directoryreader.hpp
     dependency_analyzer.hpp
@@ -115,7 +115,7 @@ set(SRCS
     extensions/flatbuffers_extensions.cpp
     types/file_tree.cpp
     types/splitted_string.cpp
-    types/file_tree_forest.cpp
+    types/file_system.cpp
     )
 
 ##
