build: split one executable into library and executable using it
* also added utility executable dep_parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ endif()
 ##
 ## SUBDIRECTORIES
 ##
-add_subdirectory(lib)  # Application
+add_subdirectory(lib) # source files used in subprojects
+add_subdirectory(lazyut) # lazyut executable
+add_subdirectory(dep_parser) # utility for parsing extra dependencies
 add_subdirectory(test) # Tests
 
 include(cmake/printInfo.cmake REQUIRED) # prints general configuration
