new: add support of extra dependencies (-d,--deps flag)
* remove rapidjson sources from the project

--- a/lazyut/CMakeLists.txt
+++ b/lazyut/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 add_executable(${LAZYUT_TARGET_NAME} main.cpp)
 
-target_link_libraries(${LAZYUT_TARGET_NAME} ${LAZYUT_LIB_NAME})
+target_link_libraries(${LAZYUT_TARGET_NAME} ${LIB_TARGET_NAME})
