build: add cmake version 3.12.1 requirement
* the requirement is based on target_link_libraries command for
objects library

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -100,7 +100,7 @@ if(Boost_FOUND)
         PUBLIC
         ${Boost_INCLUDE_DIRS})
     target_link_libraries(${LIB_TARGET_NAME}
-        PUBLIC
+        INTERFACE
         ${Boost_LIBRARIES})
 endif()
 
